[tool.poetry]
name = "objection"
version = "0.0.1"
description = "Consume stuff"
authors = ["Per Buer <per.buer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
keyring = "^21.2.0"
artifacts-keyring = "^0.2.9"
py-objectstore = "^0.2.3"

# extra-index-url=https://pkgs.dev.azure.com/arkivverket/Meta/_packaging/twine-feed/pypi/simple/

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest_dependency = "^0.5.1"
pytest-cov = "^2.8.1"
pylint = "^2.4.4"
python-dotenv = "^0.12.0"
bump2version = "^1.0.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
